Updating C# Client runtime to handle the base64url format and add the associated Json serializer for properties of that format

--- a/AutoRest/Generators/CSharp/CSharp/Templates/ModelTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/ModelTemplate.cshtml
@@ -119,6 +119,10 @@ namespace @(Settings.Namespace).Models
             {
         @:[JsonConverter(typeof(DateTimeRfc1123JsonConverter))]
             }
+            if (property.Type.IsPrimaryType(KnownPrimaryType.Base64Url))
+            {
+        @:[JsonConverter(typeof(Base64UrlJsonConverter))]
+            }
         @:[JsonProperty(PropertyName = "@property.SerializedName")]
         @:public @property.Type.Name @property.Name { get; @(property.IsReadOnly ? "private " : "")set; }
         @EmptyLine
@@ -136,6 +140,10 @@ namespace @(Settings.Namespace).Models
             if (property.Type.IsPrimaryType(KnownPrimaryType.DateTimeRfc1123))
             {
         @:[JsonConverter(typeof(DateTimeRfc1123JsonConverter))]
+            }
+            if (property.Type.IsPrimaryType(KnownPrimaryType.Base64Url))
+            {
+        @:[JsonConverter(typeof(Base64UrlJsonConverter))]
             }
         @:[JsonProperty(PropertyName = "@property.SerializedName")]
         @:public static @property.Type.Name @property.Name { get; private set; }
