Fix nodejs server to correctly check optional body
 - Also fix Python, C#, and Ruby so that they pass the new tests.

--- a/AutoRest/Generators/CSharp/CSharp/Templates/MethodTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/MethodTemplate.cshtml
@@ -161,11 +161,12 @@ else
         }
         else
         {
-        <text>
-    _requestContent = SafeJsonConvert.SerializeObject(@(Model.RequestBody.Name), @(Model.GetSerializationSettingsReference(Model.RequestBody.Type)));
-    _httpRequest.Content = new StringContent(_requestContent, Encoding.UTF8);
-    _httpRequest.Content.Headers.ContentType = MediaTypeHeaderValue.Parse("@(Model.RequestContentType)");
-        </text>
+    @:if(@(Model.RequestBody.Name) != null)
+    @:{
+        @:_requestContent = SafeJsonConvert.SerializeObject(@(Model.RequestBody.Name), @(Model.GetSerializationSettingsReference(Model.RequestBody.Type)));
+        @:_httpRequest.Content = new StringContent(_requestContent, Encoding.UTF8);
+        @:_httpRequest.Content.Headers.ContentType = MediaTypeHeaderValue.Parse("@(Model.RequestContentType)");
+    @:}
         }
     }
     else if (Model.LogicalParameters.Where(p => p.Location == ParameterLocation.FormData).Any())
