Some renamings and cleanups

--- a/AutoRest/Generators/Java/Azure.Java/Templates/AzureMethodTemplate.cshtml
+++ b/AutoRest/Generators/Java/Azure.Java/Templates/AzureMethodTemplate.cshtml
@@ -56,7 +56,7 @@ public @Model.OperationResponseReturnTypeString @(Model.Name)(@Model.MethodRequi
 @:    Validator.validate(@(param.Name));
 }
 
-@foreach (JavaParameter parameter in Model.LocalParameters)
+@foreach (ParameterModel parameter in Model.LocalParameters)
 {
     if (!parameter.IsRequired)
     {
@@ -106,7 +106,7 @@ public ServiceCall @(Model.Name)Async(@Model.MethodRequiredParameterDeclarationW
 @:    Validator.validate(@(param.Name), serviceCallback);
 }
 
-@foreach (JavaParameter parameter in Model.LocalParameters)
+@foreach (ParameterModel parameter in Model.LocalParameters)
 {
     if (!parameter.IsRequired)
     {
@@ -176,7 +176,7 @@ public @Model.OperationResponseReturnTypeString @(Model.Name)(@Model.MethodParam
 @:    Validator.validate(@(param.Name));
 }
 
-@foreach (JavaParameter parameter in Model.LocalParameters)
+@foreach (ParameterModel parameter in Model.LocalParameters)
 {
     if (parameter.IsConstant)
     {
@@ -222,7 +222,7 @@ public ServiceCall @(Model.Name)Async(@Model.MethodParameterDeclarationWithCallb
 @:    Validator.validate(@(param.Name), serviceCallback);
 }
 
-@foreach (JavaParameter parameter in Model.LocalParameters)
+@foreach (ParameterModel parameter in Model.LocalParameters)
 {
     if (parameter.IsConstant)
     {
