--- a/AutoRest/Generators/Java/Java/Templates/ModelTemplate.cshtml
+++ b/AutoRest/Generators/Java/Java/Templates/ModelTemplate.cshtml
@@ -87,13 +87,13 @@ if (!jsonSetting.IsNullOrEmpty())
 @:     *
 @:     * @@return the @property.Name value
 @:     */
-@:    public @property.Type.UserHandledType().Name get@(property.Name.ToPascalCase())() {
-if (property.Type.Name != ((IJavaType) property.Type).ResponseVariant)
+@:    public @(((ITypeModel)property.Type).ResponseVariant) get@(property.Name.ToPascalCase())() {
+if (property.Type.Name != ((ITypeModel) property.Type).ResponseVariant)
 {
 @:        if (this.@(property.Name) == null) {
 @:            return null;
 @:        }
-@:        return this.@(property.Name).get@(((IJavaType)property.Type).ResponseVariant)();
+@:        return this.@(property.Name).get@(((ITypeModel)property.Type).ResponseVariant)();
 }
 else
 {
@@ -108,8 +108,8 @@ if (!property.IsReadOnly)
 @:     *
 @:     * @@param @property.Name the @property.Name value to set
 @:     */
-@:    public void set@(property.Name.ToPascalCase())(@(((IJavaType)property.Type).ResponseVariant) @property.Name) {
-if (property.Type.Name != ((IJavaType)property.Type).ResponseVariant)
+@:    public void set@(property.Name.ToPascalCase())(@(((ITypeModel)property.Type).ResponseVariant) @property.Name) {
+if (property.Type.Name != ((ITypeModel)property.Type).ResponseVariant)
 {
 @:        this.@(property.Name) = new @(property.Type.Name)(@property.Name);
 }
