--- a/AutoRest/Generators/Java/Azure.Java/Templates/AzureMethodTemplate.cshtml
+++ b/AutoRest/Generators/Java/Azure.Java/Templates/AzureMethodTemplate.cshtml
@@ -37,11 +37,11 @@ if (Model.LocalParameters.Any(p => !p.IsConstant && !p.IsRequired))
 }
 @if (Model.ReturnType.Body != null)
 {
-@: * @@return the @Model.ReturnTypeString.EscapeXmlComment() object wrapped in @Model.OperationResponseType if successful.
+@: * @@return the @Model.ReturnTypeString.EscapeXmlComment() object wrapped in @Model.ReturnTypeModel.OperationResponseType if successful.
 }
 else
 {
-@: * @@return the @Model.OperationResponseType object if successful.
+@: * @@return the @Model.ReturnTypeModel.OperationResponseType object if successful.
 }
  */
 public @Model.OperationResponseReturnTypeString @(Model.Name)(@Model.MethodRequiredParameterDeclaration) throws @Model.ExceptionString {
@@ -157,11 +157,11 @@ public ServiceCall @(Model.Name)Async(@Model.MethodRequiredParameterDeclarationW
 }
 @if (Model.ReturnType.Body != null)
 {
-@: * @@return the @Model.ReturnTypeString.EscapeXmlComment() object wrapped in @Model.OperationResponseType if successful.
+@: * @@return the @Model.ReturnTypeString.EscapeXmlComment() object wrapped in @Model.ReturnTypeModel.OperationResponseType if successful.
 }
 else
 {
-@: * @@return the @Model.OperationResponseType object if successful.
+@: * @@return the @Model.ReturnTypeModel.OperationResponseType object if successful.
 }
  */
 public @Model.OperationResponseReturnTypeString @(Model.Name)(@Model.MethodParameterDeclaration) throws @Model.ExceptionString {
