--- a/AutoRest/Generators/Java/Java/Templates/ModelTemplate.cshtml
+++ b/AutoRest/Generators/Java/Java/Templates/ModelTemplate.cshtml
@@ -88,7 +88,7 @@ if (!jsonSetting.IsNullOrEmpty())
 @:     * @@return the @property.Name value
 @:     */
 @:    public @(((ITypeModel)property.Type).ResponseVariant) get@(property.Name.ToPascalCase())() {
-if (property.Type.Name != ((ITypeModel) property.Type).ResponseVariant)
+if (property.Type.Name != ((ITypeModel) property.Type).ResponseVariant.Name)
 {
 @:        if (this.@(property.Name) == null) {
 @:            return null;
@@ -109,7 +109,7 @@ if (!property.IsReadOnly)
 @:     * @@param @property.Name the @property.Name value to set
 @:     */
 @:    public void set@(property.Name.ToPascalCase())(@(((ITypeModel)property.Type).ResponseVariant) @property.Name) {
-if (property.Type.Name != ((ITypeModel)property.Type).ResponseVariant)
+if (property.Type.Name != ((ITypeModel)property.Type).ResponseVariant.Name)
 {
 @:        this.@(property.Name) = new @(property.Type.Name)(@property.Name);
 }
