Fix type normalization [stackoverflow in network]

--- a/AutoRest/Generators/Java/Java/Templates/ModelTemplate.cshtml
+++ b/AutoRest/Generators/Java/Java/Templates/ModelTemplate.cshtml
@@ -43,7 +43,7 @@ var type = types[i];
 {
 @:@@JsonFlatten
 }
-public class @(Model.Name)@(Model.BaseModelType != null ? " extends " + Model.BaseModelType.Name : "") {
+public class @(Model.Name)@(Model.BaseModelType != null ? " extends " + Model.BaseModelType.Name.ToPascalCase() : "") {
 @foreach (var property in Model.Properties)
 {
 @:    /**
