--- a/AutoRest/Generators/Java/Azure.Java/Templates/AzureMethodTemplate.cshtml
+++ b/AutoRest/Generators/Java/Azure.Java/Templates/AzureMethodTemplate.cshtml
@@ -68,8 +68,8 @@ public @Model.ReturnTypeModel.ClientResponseTypeString @(Model.Name)(@Model.Meth
     }
 }
     @Model.BuildInputMappings()
-    @Model.ParameterConversion
-    Response<ResponseBody> result = service.@(Model.Name)(@Model.MethodParameterApiInvocation).execute();
+    @Model.RequiredParameterConversion
+    Response<ResponseBody> result = service.@(Model.Name)(@Model.MethodRequiredParameterApiInvocation).execute();
     return client.getAzureClient().@(Model.PollingMethod)(result, @Model.PollingResourceTypeArgs);
 }
 @EmptyLine
@@ -118,8 +118,8 @@ public ServiceCall @(Model.Name)Async(@Model.MethodRequiredParameterDeclarationW
     }
 }
     @Model.BuildInputMappings()
-    @Model.ParameterConversion
-    Call<@Model.CallType> call = service.@(Model.Name)(@Model.MethodParameterApiInvocation);
+    @Model.RequiredParameterConversion
+    Call<@Model.CallType> call = service.@(Model.Name)(@Model.MethodRequiredParameterApiInvocation);
     final ServiceCall serviceCall = new ServiceCall(call);
     call.enqueue(new Callback<@Model.CallType>() {
         @@Override
