--- a/AutoRest/Generators/Java/Java/Templates/ExceptionTemplate.cshtml
+++ b/AutoRest/Generators/Java/Java/Templates/ExceptionTemplate.cshtml
@@ -12,14 +12,14 @@
 package @(Settings.Namespace.ToLower()).models;
 @EmptyLine
 
-import com.microsoft.rest.AutoRestException;
+import com.microsoft.rest.RestException;
 import retrofit2.Response;
 @EmptyLine
 
 /**
 @WrapComment(" * ", "Exception thrown for an invalid response with " + Model.Name + " information.")
  */
-public class @Model.ExceptionTypeDefinitionName extends AutoRestException {
+public class @Model.ExceptionTypeDefinitionName extends RestException {
     /**
      * Information about the associated HTTP response.
      */
