--- a/AutoRest/Generators/Java/Azure.Java/Templates/AzureMethodGroupTemplate.cshtml
+++ b/AutoRest/Generators/Java/Azure.Java/Templates/AzureMethodGroupTemplate.cshtml
@@ -22,19 +22,19 @@ package @(Settings.Namespace.ToLower()).implementation;
  * An instance of this class provides access to all the operations defined
  * in @(Model.MethodGroupType).
  */
-public final class @(Model.MethodGroupType)Impl implements @Model.MethodGroupTypeString {
+public final class @(Model.MethodGroupType)Impl {
     /** The Retrofit service to perform REST calls. */
     private @Model.MethodGroupServiceType service;
     /** The service client containing this operation class. */
-    private @Model.Name client;
+    private @(Model.Name)Impl client;
     @EmptyLine
     /**
-     * Initializes an instance of @(Model.MethodGroupType).
+     * Initializes an instance of @(Model.MethodGroupType)Impl.
      *
      * @@param retrofit the Retrofit instance built from a Retrofit Builder.
      * @@param client the instance of the service client containing this operation class.
      */
-    public @(Model.MethodGroupType)Impl(Retrofit retrofit, @Model.Name client) {
+    public @(Model.MethodGroupType)Impl(Retrofit retrofit, @(Model.Name)Impl client) {
         this.service = retrofit.create(@(Model.MethodGroupServiceType).class);
         this.client = client;
     }
