--- a/AutoRest/Generators/CSharp/CSharp/Templates/ModelTemplate.cshtml
+++ b/AutoRest/Generators/CSharp/CSharp/Templates/ModelTemplate.cshtml
@@ -123,6 +123,10 @@ namespace @(Settings.Namespace).Models
             {
         @:[JsonConverter(typeof(Base64UrlJsonConverter))]
             }
+            if (property.Type.IsPrimaryType(KnownPrimaryType.UnixTime))
+            {
+        @:[JsonConverter(typeof(UnixTimeJsonConverter))]
+            }
         @:[JsonProperty(PropertyName = "@property.SerializedName")]
         @:public @property.Type.Name @property.Name { get; @(property.IsReadOnly ? "private " : "")set; }
         @EmptyLine
@@ -144,6 +148,10 @@ namespace @(Settings.Namespace).Models
             if (property.Type.IsPrimaryType(KnownPrimaryType.Base64Url))
             {
         @:[JsonConverter(typeof(Base64UrlJsonConverter))]
+            }
+            if (property.Type.IsPrimaryType(KnownPrimaryType.UnixTime))
+            {
+        @:[JsonConverter(typeof(UnixTimeJsonConverter))]
             }
         @:[JsonProperty(PropertyName = "@property.SerializedName")]
         @:public static @property.Type.Name @property.Name { get; private set; }
