--- a/AutoRest/Generators/Python/Python/Templates/ModelTemplate.cshtml
+++ b/AutoRest/Generators/Python/Python/Templates/ModelTemplate.cshtml
@@ -11,6 +11,13 @@
 @Header("# ").TrimMultilineHeader()
 # --------------------------------------------------------------------------
 @EmptyLine
+@if(Model.ComplexConstants.Any())
+{
+    foreach(var property in Model.ComplexConstants.Values)
+    {
+@:from .@property.Name.ToPythonCase() import @property.Name
+    }
+}
 @if (Model.BaseModelType != null)
 {
 @:from .@Model.BaseModelType.Name.ToPythonCase() import @Model.BaseModelType.Name
@@ -48,7 +55,7 @@ else
   foreach (var property in Model.ComposedProperties)
   {
 @:    @ParameterWrapComment(string.Empty, ModelTemplateModel.GetPropertyDocumentationString(property))
-@:    @ParameterWrapComment(string.Empty, ":type " + property.Name + ": " + Model.GetPropertyDocumentationType(property.Type))
+@:    @ParameterWrapComment(string.Empty, ":type " + property.Name.TrimStart(new Char[] { '_' }) + ": " + Model.GetPropertyDocumentationType(property.Type))
   }
 }
     """ 
@@ -109,6 +116,20 @@ else
 @if (Model.NeedsPolymorphicConverter)
 {
         @:self.@Model.BasePolymorphicDiscriminator = '@Model.SerializedName'
+}
+
+@{
+    foreach (var property in Model.Properties)
+    {
+        if (property.IsReadOnly || property.IsConstant)
+        {
+    @EmptyLine
+    @:@@property
+    @:def @(property.Name.TrimStart(new Char[] { '_' }))(self):
+        @:return self.@(property.Name)
+        }
+
+    }
 }
 @if (Model.IsException)
 {
