--- a/AutoRest/Generators/Java/Azure.Java/Templates/PageTemplate.cshtml
+++ b/AutoRest/Generators/Java/Azure.Java/Templates/PageTemplate.cshtml
@@ -59,17 +59,21 @@ public class @Model.TypeDefinitionName<T> implements Page<T> {
      * Sets the link to the next page.
      *
      * @@param nextPageLink the link to the next page.
+     * @@return this Page object itself.
      */
-    public void setNextPageLink(String nextPageLink) {
+    public PageImpl<T> setNextPageLink(String nextPageLink) {
         this.nextPageLink = nextPageLink;
+        return this;
     }
     @EmptyLine
     /**
      * Sets the list of items.
      *
      * @@param items the list of items in {@@link List}.
+     * @@return this Page object itself.
      */
-    public void setItems(List<T> items) {
+    public PageImpl<T> setItems(List<T> items) {
         this.items = items;
+        return this;
     }
 }
