--- a/AutoRest/Generators/Java/Azure.Java/Templates/AzureServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/Java/Azure.Java/Templates/AzureServiceClientTemplate.cshtml
@@ -86,7 +86,7 @@ if(!property.IsReadOnly)
 @:     * @@return the @(operation.MethodGroupType)Inner object.
 @:     */
 @:    public @(operation.MethodGroupType)Inner @(operation.MethodGroupName)() {
-@:        return new @(operation.MethodGroupType)Inner(this.retrofitBuilder.client(clientBuilder.build()).build(), this);
+@:        return new @(operation.MethodGroupType)Inner(retrofit, this);
 @:    }
 }
 @EmptyLine
@@ -222,6 +222,8 @@ else
         this.azureClient.setCredentials(this.credentials);
 
         this.retrofitBuilder.baseUrl(baseUrl);
+        this.httpClient = clientBuilder.build();
+        this.retrofit = retrofitBuilder.client(httpClient).build();
 @if (Model.MethodTemplateModels.Any())
 {
 @:        initializeService();
@@ -232,22 +234,7 @@ else
 @EmptyLine
 <text>
     private void initializeService() {
-        service = this.retrofitBuilder.client(this.clientBuilder.build())
-                .build()
-                .create(@(Model.ServiceClientServiceType).class);
-    }
-</text>
-@EmptyLine
-<text>
-    /**
-     * Sets the logging level for OkHttp client.
-     *
-     * @@param logLevel the logging level enum
-     */
-    @@Override
-    public void setLogLevel(Level logLevel) {
-        super.setLogLevel(logLevel);
-        initializeService();
+        service = retrofit.create(@(Model.ServiceClientServiceType).class);
     }
 </text>
 @EmptyLine
