--- a/AutoRest/Generators/Java/Java/Templates/ServiceClientTemplate.cshtml
+++ b/AutoRest/Generators/Java/Java/Templates/ServiceClientTemplate.cshtml
@@ -79,7 +79,7 @@ if(!property.IsReadOnly)
 @:     * @@return the @(operation.MethodGroupType) object.
 @:     */
 @:    public @(operation.MethodGroupType) @(operation.MethodGroupName)() {
-@:        return new @(operation.MethodGroupType)Impl(this.retrofitBuilder.client(clientBuilder.build()).build(), this);
+@:        return new @(operation.MethodGroupType)Impl(retrofit, this);
 @:    }
 }
 @EmptyLine
@@ -136,6 +136,8 @@ else
     }
         super.initialize();
         this.retrofitBuilder.baseUrl(baseUrl);
+        this.httpClient = clientBuilder.build();
+        this.retrofit = retrofitBuilder.client(httpClient).build();
 @if (Model.MethodTemplateModels.Any())
 {
 @:        initializeService();
@@ -146,22 +148,7 @@ else
 @EmptyLine
 <text>
     private void initializeService() {
-        service = this.retrofitBuilder.client(this.clientBuilder.build())
-                .build()
-                .create(@(Model.ServiceClientServiceType).class);
-    }
-</text>
-@EmptyLine
-<text>
-    /**
-     * Sets the logging level for OkHttp client.
-     *
-     * @@param logLevel the logging level enum
-     */
-    @@Override
-    public void setLogLevel(Level logLevel) {
-        super.setLogLevel(logLevel);
-        initializeService();
+        service = retrofit.create(@(Model.ServiceClientServiceType).class);
     }
 </text>
 @EmptyLine
